# aquill

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL_USE.md  CONTACT.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md
app/: .gitignore  README.md  pyproject.toml
app/src/revenge_transcriber/: __init__.py  archive.py  cli.py  db.py  desktop.py  exceptions.py  formatters.py  lyrics.py  media.py  naming.py  paths.py  pipeline.py  records.py  server.py  transcriber.py
app/tests/: test_backend_quality.py
installer/: app-store-manifest.template.json  aquill-desktop.py  aquill-version.txt  aquill.iss  aquill.spec
scripts/: build-web.ps1  build-windows-app.ps1  build-windows-installer.ps1  dev-env.ps1  doctor.ps1  quality-all.ps1  quality-backend.ps1  quality-packaging.ps1  quality-web.ps1  release-check.ps1  serve-api.ps1  serve-web.ps1  setup-packaging.ps1  setup-web.ps1  setup.ps1  smoke-archive-roundtrip.ps1  smoke-web-ui.ps1  start-desktop.ps1  start-dev.ps1  start-local.ps1  stop-local.ps1  transcribe.ps1
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  styles.css  subtitleQuality.test.ts  subtitleQuality.ts
