[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aquill"
version = "0.1.0"
description = "Local-first transcription and subtitle generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PolyForm Noncommercial License 1.0.0" }
authors = [
  { name = "Aquill contributors" }
]
dependencies = [
  "faster-whisper>=1.1.0",
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
  "imageio-ffmpeg>=0.5.1"
]

[project.scripts]
aquill = "revenge_transcriber.cli:main"
aquill-api = "revenge_transcriber.server:main"

[tool.setuptools.packages.find]
where = ["src"]
